--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,4 @@
+<%= content_for(:navbar_class, "navbar-home") %>
 <div class="home-1">
   <div class="container">
     <div class="title-home">
@@ -6,7 +7,7 @@
           <span>INTRODUCE</span>
         </div>
         <h1>ŌMA</h1>
-        <h1>VERTICAL CINEMA</h1>
+        <h1><%= t('hello') %></h1>
         <div class="color-bar"></div>
       </div>
     </div>
