--- a/app/views/cinemas/new.html.erb
+++ b/app/views/cinemas/new.html.erb
@@ -11,3 +11,11 @@
 
   <%= f.submit class: 'btn btn-primary' %>
 <% end %>
+
+<%= simple_form_for @cinema do |f| %>
+  <%= f.input :name %>
+  <%= f.input :address %>
+  <%= f.input :photo %>
+  <%= f.input :photo_cache, as: :hidden %>
+  <%= f.button :submit %>
+<% end %>
