--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,15 +1,66 @@
-<%= content_for(:navbar_class, "navbar-home") %>
-<div class="home-1">
-  <div class="container">
-    <div class="title-home">
-      <div class="boxed boxed-inner">
-        <div class="vertical-title hidden-xs hidden-sm">
-          <span>INTRODUCE</span>
-        </div>
-        <h1>ŌMA</h1>
-        <h1><%= t('hello') %></h1>
-        <div class="color-bar"></div>
-      </div>
-    </div>
-  </div>
-</div>
+<nav id="cd-vertical-nav">
+    <ul>
+      <li>
+        <a href="#section1" data-number="1">
+          <span class="cd-dot"></span>
+          <span class="cd-label">Intro</span>
+        </a>
+      </li>
+      <li>
+        <a href="#section2" data-number="2">
+          <span class="cd-dot"></span>
+          <span class="cd-label">About</span>
+        </a>
+      </li>
+      <li>
+        <a href="#section3" data-number="3">
+          <span class="cd-dot"></span>
+          <span class="cd-label">Features</span>
+        </a>
+      </li>
+      <li>
+        <a href="#section4" data-number="4">
+          <span class="cd-dot"></span>
+          <span class="cd-label">Portfolio</span>
+        </a>
+      </li>
+      <li>
+        <a href="#section5" data-number="5">
+          <span class="cd-dot"></span>
+          <span class="cd-label">Pricing</span>
+        </a>
+      </li>
+      <li>
+        <a href="#section6" data-number="6">
+          <span class="cd-dot"></span>
+          <span class="cd-label">Contact</span>
+        </a>
+      </li>
+    </ul>
+  </nav>
+  <a class="cd-nav-trigger cd-img-replace">Open navigation<span></span></a>
+
+  <section id="section1" class="cd-section">
+    <h1>Vertical Fixed Navigation</h1>
+    <a href="#section2" class="cd-scroll-down cd-img-replace">scroll down</a>
+  </section><!-- cd-section -->
+
+  <section id="section2" class="cd-section">
+    <p>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto numquam, totam iusto officia earum perferendis, culpa ad atque eveniet praesentium nobis expedita similique beatae tenetur. Distinctio vel tenetur, id cum.&rdquo;</p>
+  </section><!-- cd-section -->
+
+  <section id="section3" class="cd-section">
+    <p>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto numquam, totam iusto officia earum perferendis, culpa ad atque eveniet praesentium nobis expedita similique beatae tenetur. Distinctio vel tenetur, id cum.&rdquo;</p>
+  </section><!-- cd-section -->
+
+  <section id="section4" class="cd-section">
+    <p>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto numquam, totam iusto officia earum perferendis, culpa ad atque eveniet praesentium nobis expedita similique beatae tenetur. Distinctio vel tenetur, id cum.&rdquo;</p>
+  </section><!-- cd-section -->
+
+  <section id="section5" class="cd-section">
+    <p>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto numquam, totam iusto officia earum perferendis, culpa ad atque eveniet praesentium nobis expedita similique beatae tenetur. Distinctio vel tenetur, id cum.&rdquo;</p>
+  </section><!-- cd-section -->
+
+  <section id="section6" class="cd-section">
+    <p>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto numquam, totam iusto officia earum perferendis, culpa ad atque eveniet praesentium nobis expedita similique beatae tenetur. Distinctio vel tenetur, id cum.&rdquo;</p>
+  </section><!-- cd-section -->
