--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <nav id="cd-vertical-nav">
-    <ul>
+    <ul style="list-style: none;">
       <li>
         <a href="#section1" data-number="1">
           <span class="cd-dot"></span>
@@ -41,7 +41,7 @@
   <a class="cd-nav-trigger cd-img-replace">Open navigation<span></span></a>
 
   <section id="section1" class="cd-section">
-    <h1>Vertical Fixed Navigation</h1>
+    <h1>Ōma Cinema concept</h1>
     <a href="#section2" class="cd-scroll-down cd-img-replace">scroll down</a>
   </section><!-- cd-section -->
 
