--- a/app/assets/stylesheets/components/_navbarhome.scss
+++ b/app/assets/stylesheets/components/_navbarhome.scss
@@ -118,7 +118,7 @@ Main components
   bottom: 20px;
   width: 38px;
   height: 44px;
-  background: url("../img/cd-arrow-bottom.svg") no-repeat center center;
+  background: url("../../arrow.svg") no-repeat center center;
 }
 
 /* No Touch devices */
@@ -126,7 +126,20 @@ Main components
   display: none;
 }
 
-.no-touch #cd-vertical-nav {
+// {
+//   position: fixed;
+//   right: 40px;
+//   top: 50%;
+//   bottom: auto;
+//   -webkit-transform: translateY(-50%);
+//   -moz-transform: translateY(-50%);
+//   -ms-transform: translateY(-50%);
+//   -o-transform: translateY(-50%);
+//   transform: translateY(-50%);
+//   z-index: 1;
+// }
+
+#cd-vertical-nav {
   position: fixed;
   right: 40px;
   top: 50%;
@@ -138,21 +151,23 @@ Main components
   transform: translateY(-50%);
   z-index: 1;
 }
-.no-touch #cd-vertical-nav li {
+
+
+#cd-vertical-nav li {
   text-align: right;
 }
-.no-touch #cd-vertical-nav a {
+#cd-vertical-nav a {
   display: inline-block;
   /* prevent weird movements on hover when you use a CSS3 transformation - webkit browsers */
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
 }
-.no-touch #cd-vertical-nav a:after {
+#cd-vertical-nav a:after {
   content: "";
   display: table;
   clear: both;
 }
-.no-touch #cd-vertical-nav a span {
+#cd-vertical-nav a span {
   float: right;
   display: inline-block;
   -webkit-transform: scale(0.6);
@@ -161,20 +176,20 @@ Main components
   -o-transform: scale(0.6);
   transform: scale(0.6);
 }
-.no-touch #cd-vertical-nav a:hover span {
+#cd-vertical-nav a:hover span {
   -webkit-transform: scale(1);
   -moz-transform: scale(1);
   -ms-transform: scale(1);
   -o-transform: scale(1);
   transform: scale(1);
 }
-.no-touch #cd-vertical-nav a:hover .cd-label {
+#cd-vertical-nav a:hover .cd-label {
   opacity: 1;
 }
-.no-touch #cd-vertical-nav a.is-selected .cd-dot {
+#cd-vertical-nav a.is-selected .cd-dot {
   background-color: white;
 }
-.no-touch #cd-vertical-nav .cd-dot {
+#cd-vertical-nav .cd-dot {
   position: relative;
   /* we set a top value in order to align the dot with the label. If you change label's font, you may need to change this top value*/
   top: 8px;
@@ -191,7 +206,31 @@ Main components
   -o-transform-origin: 50% 50%;
   transform-origin: 50% 50%;
 }
-.no-touch #cd-vertical-nav .cd-label {
+
+#cd-vertical-nav .cd-dot {
+  position: relative;
+  /* we set a top value in order to align the dot with the label. If you change label's font, you may need to change this top value*/
+  top: 8px;
+  height: 12px;
+  width: 12px;
+  border-radius: 50%;
+  background-color: #d88683;
+  -webkit-transition: -webkit-transform 0.2s, background-color 0.5s;
+  -moz-transition: -moz-transform 0.2s, background-color 0.5s;
+  transition: transform 0.2s, background-color 0.5s;
+  -webkit-transform-origin: 50% 50%;
+  -moz-transform-origin: 50% 50%;
+  -ms-transform-origin: 50% 50%;
+  -o-transform-origin: 50% 50%;
+  transform-origin: 50% 50%;
+}
+
+
+
+
+
+
+#cd-vertical-nav .cd-label {
   position: relative;
   margin-right: 10px;
   padding: .4em .5em;
