--- a/app/assets/stylesheets/components/_navbarhome.scss
+++ b/app/assets/stylesheets/components/_navbarhome.scss
@@ -118,7 +118,7 @@ Main components
   bottom: 20px;
   width: 38px;
   height: 44px;
-  background: url("../../arrow.svg") no-repeat center center;
+  background: url("../../assets/arrow.svg") no-repeat center center;
 }
 
 /* No Touch devices */
