--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,27 +1,80 @@
-<% array = [] %>
-<% arr = [] %>
-<% @articles.each do |article| %>
-<% article.tag_list.each do |tage| %>
-<% array << tage %>
-<% end %>
-<% end %>
-<% array.uniq.each do |tag| %>
-<%= link_to tag, articles_path(tag: tag) %>
-<% end %>
+<%= content_for(:navbar_class, "navbar-home") %>
+<nav id="cd-vertical-nav">
+  <ul style="list-style: none;">
+    <li>
+      <a href="#section1" data-number="1">
+        <span class="cd-dot"></span>
+        <span class="cd-label">Intro</span>
+      </a>
+    </li>
+    <li>
+      <a href="#section2" data-number="2">
+        <span class="cd-dot"></span>
+        <span class="cd-label">Articles</span>
+      </a>
+    </li>
+    <li>
+      <a href="#section3" data-number="3">
+        <span class="cd-dot"></span>
+        <span class="cd-label">Press Release</span>
+      </a>
+    </li>
+    <li>
+      <a href="#section4" data-number="4">
+        <span class="cd-dot"></span>
+        <span class="cd-label">Kit Press</span>
+      </a>
+    </li>
+  </ul>
+</nav>
+<a class="cd-nav-trigger cd-img-replace">Open navigation<span></span></a>
 
+<section id="section1" class="cd-section">
+  <div class="section">
+  <h1>Press</h1>
+  <a href="#section2" class="cd-scroll-down cd-img-replace">scroll down</a>
+  </div>
+</section><!-- cd-section -->
 
-
-<% @articles.each do |article| %>
-<h2><%= link_to article.title, article_path(article) %></h2>
-<p><%= article.content %>
-  <br>
-  <br>
-  <% article.tag_list.each do |tag| %>
-  <%= link_to tag, articles_path(tag: tag) %>
+<section id="section2" class="cd-section d-flex">
+  <div class="section">
+  <h1 class="pb-5">Press Articles</h1>
+  <% array = [] %>
+  <% arr = [] %>
+  <% @articles.each do |article| %>
+  <% article.tag_list.each do |tage| %>
+  <% array << tage %>
   <% end %>
-</p>
-<% end %>
+  <% end %>
+  <% array.uniq.each do |tag| %>
+  <h3 class="pb-5"><%= link_to tag, articles_path(tag: tag) %></h3>
+  <% end %>
+  <% @articles.each do |article| %>
+  <div class="d-inline-flex">
+  <div class="article-card">
+  <h1><%= link_to article.title, article_path(article) %></h1>
+  <p><%= article.content %>
+    <br>
+    <br>
+    <% article.tag_list.each do |tag| %>
+    <%= link_to tag, articles_path(tag: tag) %>
+    <% end %>
+  </p>
+  </div>
+  </div>
+  <% end %>
 
-<h2><% if params[:tag].present? %></h2>
-<h2><%=link_to 'Go Back', articles_path %></h2>
-<% end %>
+  <h2><% if params[:tag].present? %></h2>
+  <h2><%=link_to 'Go Back', articles_path %></h2>
+  <% end %>
+  </div>
+</section><!-- cd-section -->
+
+<section id="section3" class="cd-section">
+  <p>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto numquam, totam iusto officia earum perferendis, culpa ad atque eveniet praesentium nobis expedita similique beatae tenetur. Distinctio vel tenetur, id cum.&rdquo;</p>
+</section><!-- cd-section -->
+
+<section id="section4" class="cd-section">
+  <p>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto numquam, totam iusto officia earum perferendis, culpa ad atque eveniet praesentium nobis expedita similique beatae tenetur. Distinctio vel tenetur, id cum.&rdquo;</p>
+</section><!-- cd-section -->
+<!-- cd-section -->
