--- a/app/assets/stylesheets/components/_navbarhome.scss
+++ b/app/assets/stylesheets/components/_navbarhome.scss
@@ -57,6 +57,9 @@ Main components
   display: flex;
   padding: 2em 0;
   text-align: center;
+  #map1 {
+    text-align: left !important;
+  }
 }
 
 .section {
