--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -50,31 +50,98 @@
   <h3 class="pb-5"><%= link_to tag, articles_path(tag: tag) %></h3>
   <% end %>
   <% @articles.each do |article| %>
-  <div class="d-inline-flex">
-  <div class="article-card">
-  <h1><%= link_to article.title, article_path(article) %></h1>
-  <p><%= article.content %>
-    <br>
-    <br>
-    <% article.tag_list.each do |tag| %>
-    <%= link_to tag, articles_path(tag: tag) %>
+  <a href="/articles/<%=article.id%>" style="text-decoration : none; color : #000000;">
+    <div class="d-inline-flex">
+      <div class="article-card">
+        <h1><%= link_to article.title, article_path(article) %></h1>
+        <p><%= article.content %>
+          <br>
+          <br>
+          <% article.tag_list.each do |tag| %>
+          <%= link_to tag, articles_path(tag: tag) %>
+          <% end %>
+        </p>
+      </div>
+    </div>
+  </a>
+  <% end %>
+    <h2><% if params[:tag].present? %></h2>
+    <h2><%=link_to 'Go Back', articles_path %></h2>
     <% end %>
-  </p>
-  </div>
-  </div>
-  <% end %>
-
-  <h2><% if params[:tag].present? %></h2>
-  <h2><%=link_to 'Go Back', articles_path %></h2>
-  <% end %>
   </div>
 </section><!-- cd-section -->
 
 <section id="section3" class="cd-section">
-  <p>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto numquam, totam iusto officia earum perferendis, culpa ad atque eveniet praesentium nobis expedita similique beatae tenetur. Distinctio vel tenetur, id cum.&rdquo;</p>
+  <div class="section">
+    <h1 class="pb-5">Press Releases</h1>
+
+  <!--Carousel Wrapper-->
+<div id="multi-item-example" class="carousel slide carousel-multi-item" data-ride="carousel">
+
+  <!--Controls-->
+  <div class="controls-top pb-5">
+    <a class="btn-floating" href="#multi-item-example" data-slide="prev"><i class="fas fa-chevron-left"></i></a>
+    <a class="btn-floating" href="#multi-item-example" data-slide="next"><i
+        class="fas fa-chevron-right"></i></a>
+  </div>
+  <div class="carousel-inner" role="listbox">
+    <!--First slide-->
+    <div class="carousel-item active d-flex">
+
+      <div class="col-md-4">
+        <div class="card mb-2">
+          <div class="card-body">
+            <h4 class="card-title">Press Release 2018</h4>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+              card's content.</p>
+            <a class="btn btn-primary">See more</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="card mb-2">
+          <div class="card-body">
+            <h4 class="card-title">Press Release 2019</h4>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+              card's content.</p>
+            <a class="btn btn-primary">See more</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="card mb-2">
+          <div class="card-body">
+            <h4 class="card-title">Press release 2020</h4>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+              card's content.</p>
+            <a class="btn btn-primary">See more</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <ol class="carousel-indicators pt-5">
+    <li data-target="#multi-item-example" data-slide-to="0" class="active"></li>
+    <li data-target="#multi-item-example" data-slide-to="1"></li>
+    <li data-target="#multi-item-example" data-slide-to="2"></li>
+  </ol>
+  <!--/.Slides-->
+</div>
+  </div>
+<!--/.Carousel Wrapper-->
 </section><!-- cd-section -->
 
 <section id="section4" class="cd-section">
-  <p>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto numquam, totam iusto officia earum perferendis, culpa ad atque eveniet praesentium nobis expedita similique beatae tenetur. Distinctio vel tenetur, id cum.&rdquo;</p>
+  <div class="section">
+    <h1 class="pb-5">Press Info</h1>
+    <h2>Contact</h2>
+    <h3>Nicolas Chican</h3>
+    <h5>nchican@omacinema.com</h5>
+    <br>
+    <br>
+    <a class="btn btn-primary">Press kit</a>
+  </div>
 </section><!-- cd-section -->
 <!-- cd-section -->
