--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -19,9 +19,9 @@
 
   <section id="section1" class="cd-section">
     <div class="section">
-      <h1>Contact</h1>
+      <h1 class="pb-5">Contact</h1>
       <a href="#section2" class="cd-scroll-down cd-img-replace">scroll down</a>
-    <div class="d-inline-flex justify-content-around contact-card">
+      <div class="d-flex justify-content-between mx-5 px-5">
       <div class="contact-info">
         <h1>Ōma</h1>
         <h3>38, rue de Trévise</h3>
@@ -30,18 +30,13 @@
         <h4>+33 1 42 00 11 24</h4>
         <h4>nchican@omacinema.com</h4>
       </div>
-
-      <div id="map1" style="width: 200px; height: 600px;" data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
+      <div id="map1" style="width: 500px; height: 300px;" data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
       </div>
-    </div>
-
-
-
-
-
+      </div>
     </div>
   </section><!-- cd-section -->
 
   <section id="section2" class="cd-section">
-    <p>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto numquam, totam iusto officia earum perferendis, culpa ad atque eveniet praesentium nobis expedita similique beatae tenetur. Distinctio vel tenetur, id cum.&rdquo;</p>
+    <div class="section">
+    </div>
   </section><!-- cd-section -->
