--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -42,8 +42,10 @@
   <a class="cd-nav-trigger cd-img-replace">Open navigation<span></span></a>
 
   <section id="section1" class="cd-section">
+    <div class="section">
     <h1>Ōma Cinema concept</h1>
     <a href="#section2" class="cd-scroll-down cd-img-replace">scroll down</a>
+    </div>
   </section><!-- cd-section -->
 
   <section id="section2" class="cd-section">
