--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,6 +1,8 @@
 .article-card {
   background: #3E3946;                         /* White background */
-  padding: 30px;                             /* Internal space */
+  padding: 30px;
+  margin-left: 15px;
+  margin-right: 15px;                           /* Internal space */
   border-radius: 4px;                        /* Small radius */
   box-shadow: 0 10px 30px rgba(0,0,0,.1);
 }
