--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -55,7 +55,7 @@
                 </div>
               </div>
               <%= f.input :body, placeholder: 'your message...' %>
-              <%= f.submit 'Send' %>
+              <%= f.submit 'Send', class: 'btn btn-primary'%>
             <% end %>
           </div>
         </div>
