--- a/app/assets/stylesheets/components/_navbarhome.scss
+++ b/app/assets/stylesheets/components/_navbarhome.scss
@@ -17,7 +17,7 @@ html * {
 body {
   font-size: 100%;
   font-family: "Ubuntu", sans-serif;
-  color: #3e3947;
+  color: #191E55;
   background-color: white;
 }
 
@@ -66,13 +66,13 @@ Main components
   margin: auto;
 }
 .cd-section:nth-of-type(odd) {
-  background-color: #3e3947;
+  background-color: #FFFFFF;
 }
 .cd-section:nth-of-type(odd) p {
   color: #898099;
 }
 .cd-section:nth-of-type(even) {
-  background-color: #745360;
+  background-color: #191E55;
 }
 .cd-section:nth-of-type(even) p {
   color: #bda3ad;
