--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -41,7 +41,7 @@
   </nav>
   <a class="cd-nav-trigger cd-img-replace">Open navigation<span></span></a>
 
-  <section id="section1" class="cd-section">
+  <section id="section1" class="cd-section home1">
     <div class="section">
     <h1>Ōma Cinema concept</h1>
     <a href="#section2" class="cd-scroll-down cd-img-replace">scroll down</a>
