--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -38,38 +38,62 @@
 
 <section id="section2" class="cd-section d-flex">
   <div class="section">
-  <h1 class="pb-5">Press Articles</h1>
-  <% array = [] %>
-  <% arr = [] %>
-  <% @articles.each do |article| %>
-  <% article.tag_list.each do |tage| %>
-  <% array << tage %>
-  <% end %>
-  <% end %>
-  <% array.uniq.each do |tag| %>
-  <h3 class="pb-5"><%= link_to tag, articles_path(tag: tag) %></h3>
-  <% end %>
-  <% @articles.each do |article| %>
-  <a href="/articles/<%=article.id%>" style="text-decoration : none; color : #000000;">
-    <div class="d-inline-flex">
-      <div class="article-card">
-        <h1><%= link_to article.title, article_path(article) %></h1>
-        <p><%= article.content %>
-          <br>
-          <br>
-          <% article.tag_list.each do |tag| %>
-          <%= link_to tag, articles_path(tag: tag) %>
+    <h1 class="pb-5">Press Articles</h1>
+    <% array = [] %>
+    <% arr = [] %>
+    <% @articles.each do |article| %>
+      <% article.tag_list.each do |tage| %>
+        <% array << tage %>
+       <% end %>
+    <% end %>
+    <% array.uniq.each do |tag| %>
+      <h3 class="pb-5"><%= link_to tag, articles_path(tag: tag) %></h3>
+    <% end %>
+      <div id="multi-item-example" class="carousel slide carousel-multi-item" data-ride="carousel">
+      <!--Controls-->
+        <div class="controls-top pb-5">
+          <a class="btn-floating" href="#multi-item-example" data-slide="prev"><i class="fas fa-chevron-left"></i></a>
+          <a class="btn-floating" href="#multi-item-example" data-slide="next"><i
+          class="fas fa-chevron-right"></i></a>
+        </div>
+        <div class="carousel-inner" role="listbox">
+      <!--First slide-->
+          <div class="carousel-item active d-flex">
+          <% @articles.each do |article| %>
+            <div class="col-md-4">
+              <div class="card mb-2">
+                <div class="card-body">
+                  <div class="d-inline-flex">
+                    <div class="article-card">
+                      <h1><%= link_to article.title, article_path(article) %></h1>
+                        <p><%= article.content %>
+                        <br>
+                        <br>
+                        <% article.tag_list.each do |tag| %>
+                          <%= link_to tag, articles_path(tag: tag) %>
+                          <% end %>
+                        </p>
+                        <a class="btn btn-primary">See more</a>
+                   </div>
+                 </div>
+               </div>
+              </div>
+            </div>
           <% end %>
-        </p>
+          </div>
+        </div>
       </div>
-    </div>
-  </a>
-  <% end %>
     <h2><% if params[:tag].present? %></h2>
     <h2><%=link_to 'Go Back', articles_path %></h2>
     <% end %>
+    <ol class="carousel-indicators pt-5">
+    <li data-target="#multi-item-example" data-slide-to="0" class="active"></li>
+    <li data-target="#multi-item-example" data-slide-to="1"></li>
+    <li data-target="#multi-item-example" data-slide-to="2"></li>
+  </ol>
   </div>
-</section><!-- cd-section -->
+</section>
+<!-- cd-section -->
 
 <section id="section3" class="cd-section">
   <div class="section">
@@ -77,7 +101,6 @@
 
   <!--Carousel Wrapper-->
 <div id="multi-item-example" class="carousel slide carousel-multi-item" data-ride="carousel">
-
   <!--Controls-->
   <div class="controls-top pb-5">
     <a class="btn-floating" href="#multi-item-example" data-slide="prev"><i class="fas fa-chevron-left"></i></a>
