--- a/app/views/cinemas/index.html.erb
+++ b/app/views/cinemas/index.html.erb
@@ -1,18 +1,59 @@
-<% array = [] %>
-<% @cinemas.each do |cinema| %>
-  <h2><%= link_to cinema.name, cinema_path(cinema) %></h2>
-  <p><%= cinema.address %></p>
-  <% unless cinema.review_ids.empty? %>
-  <% nb_stars = cinema.reviews.average(:rating).round.to_i %>
-  <% nb_stars.times do %>
-    <span style="color: #2F2FA2"><i class="fas fa-star"></i></span>
-  <% end %>
-  <% (5 - nb_stars).times do %>
-    <span style="color: #2F2FA2"><i class="far fa-star"></i></span>
-  <% end %>
-  <p><%= cinema.reviews.count %> avis</p>
-  <% end %>
-<% end %>
+<%= content_for(:navbar_class, "navbar-home") %>
+<nav id="cd-vertical-nav">
+    <ul style="list-style: none;">
+      <li>
+        <a href="#section1" data-number="1">
+          <span class="cd-dot"></span>
+          <span class="cd-label">Intro</span>
+        </a>
+      </li>
+      <li>
+        <a href="#section2" data-number="2">
+          <span class="cd-dot"></span>
+          <span class="cd-label">About</span>
+        </a>
+      </li>
+      <li>
+        <a href="#section3" data-number="3">
+          <span class="cd-dot"></span>
+          <span class="cd-label">Features</span>
+        </a>
+      </li>
+    </ul>
+  </nav>
+  <a class="cd-nav-trigger cd-img-replace">Open navigation<span></span></a>
+
+  <section id="section1" class="cd-section">
+    <div class="section">
+    <h1>Location</h1>
+    <a href="#section2" class="cd-scroll-down cd-img-replace">scroll down</a>
+    </div>
+  </section><!-- cd-section -->
+
+  <section id="section2" class="cinema-section">
+    <% array = [] %>
+    <% @cinemas.each do |cinema| %>
+      <div class="cinema-card">
+        <a href="/cinemas/<%=cinema.id%>">
+          <h2><%= link_to cinema.name, cinema_path(cinema) %></h2>
+          <p><%= cinema.address %></p>
+          <% unless cinema.review_ids.empty? %>
+            <% nb_stars = cinema.reviews.average(:rating).round.to_i %>
+            <% nb_stars.times do %>
+              <span style="color: #2F2FA2"><i class="fas fa-star"></i></span>
+            <% end %>
+            <% (5 - nb_stars).times do %>
+              <span style="color: #2F2FA2"><i class="far fa-star"></i></span>
+           <% end %>
+           <p><%= cinema.reviews.count %> avis</p>
+          <% end %>
+        </a>
+      </div>
+    <% end %>
+  </section><!-- cd-section -->
+<!--
+  <section id="section3" class="cinema-section">
+  </section><!-- cd-section --> -->
 
 <div
   id="map"
