--- a/app/assets/stylesheets/components/_home.scss
+++ b/app/assets/stylesheets/components/_home.scss
@@ -1,4 +1,5 @@
 .home1 {
-  background-image: url("./vue_interieur.jpg");
+  background-image: linear-gradient(rgba(25, 30, 85, 0.5), rgba(255, 255, 0, 0)),
+                  url("./vue_interieur.jpg");
   background-size: cover;
 }
