--- a/app/assets/stylesheets/components/_navbarhome.scss
+++ b/app/assets/stylesheets/components/_navbarhome.scss
@@ -69,13 +69,13 @@ Main components
   background-color: #FFFFFF;
 }
 .cd-section:nth-of-type(odd) p {
-  color: #898099;
+  color: #191E55;
 }
 .cd-section:nth-of-type(even) {
   background-color: #191E55;
 }
 .cd-section:nth-of-type(even) p {
-  color: #bda3ad;
+  color: #FFFFFF;
 }
 .cd-section h1, .cd-section p {
   // position: absolute;
