--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -30,7 +30,7 @@
       <div>
 
       <% if user_signed_in? %>
-      <a href="#"><li>What is Ōma ?</li></a>
+      <a><li><%= link_to "What is Ōma ?", oma_path %></li></a>
       <a href="#"><li>Experience</li></a>
       <a><li><%= link_to "Locations", cinemas_path %></li></a>
       <a><li><%= link_to "Contact", contact_path %></li></a>
