--- a/app/assets/stylesheets/components/_oma.scss
+++ b/app/assets/stylesheets/components/_oma.scss
@@ -14,7 +14,7 @@ body {
   font-size: 1.6rem;
   font-family: "Merriweather", serif;
   color: #71495b;
-  background-color: #3e253c;
+  background-color: #191E55;
 }
 
 /* --------------------------------
@@ -77,7 +77,7 @@ Icons Filling Effect - by CodyHouse.co
   z-index: 2;
   min-height: 50px;
   margin-left: 56px;
-  background-color: #3e253c;
+  background-color: #191E55;
   padding: 1em 1em 4em;
 }
 
@@ -163,10 +163,12 @@ Icons Filling Effect - by CodyHouse.co
     display: block;
   }
   .cd-service.cd-service--1::before {
-    background-image: url("../img/cd-icon-1-large.svg");
+    background-image: url("./visuel1.png");
+    background-size: cover;
   }
   .cd-service.cd-service--2::before {
-    background-image: url("../img/cd-icon-2-large.svg");
+    background-image: url("./visuel2.png");
+    background-size: cover;
   }
   .cd-service.cd-service--3::before {
     background-image: url("../img/cd-icon-3-large.svg");
@@ -238,34 +240,6 @@ Icons Filling Effect - by CodyHouse.co
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section, main {
-  display: block;
-}
-body {
-  line-height: 1;
-}
 ol, ul {
   list-style: none;
 }
