--- a/app/views/cinemas/show.html.erb
+++ b/app/views/cinemas/show.html.erb
@@ -1,22 +1,54 @@
- <h2><%= @cinema.name %></h2>
-<p><%= @cinema.address %></p>
-<%= cl_image_tag @cinema.photo, height: 300, width: 400, crop: :fill %>
-<br>
-<% @reviews.each do |review| %>
+<%= content_for(:navbar_class, "navbar-home") %>
+<nav id="cd-vertical-nav">
+    <ul style="list-style: none;">
+      <li>
+        <a href="#section1" data-number="1">
+          <span class="cd-dot"></span>
+          <span class="cd-label">Intro</span>
+        </a>
+      </li>
+      <li>
+        <a href="#section2" data-number="2">
+          <span class="cd-dot"></span>
+          <span class="cd-label">About</span>
+        </a>
+      </li>
+      <li>
+        <a href="#section3" data-number="3">
+          <span class="cd-dot"></span>
+          <span class="cd-label">Features</span>
+        </a>
+      </li>
+    </ul>
+  </nav>
+  <a class="cd-nav-trigger cd-img-replace">Open navigation<span></span></a>
+
+  <section id="section1" class="cd-section" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)),
+         url('<%= cl_image_path @cinema.photo, height: 300, width: 400, crop: :fill, background_size: :cover; %>')">
+    <div class="section">
+    <h2><%= @cinema.name %></h2>
+    <a href="#section2" class="cd-scroll-down cd-img-replace">scroll down</a>
+    </div>
+  </section><!-- cd-section -->
+
+  <section id="section2" >
+    <% @reviews.each do |review| %>
 <!--   <h2><%= review.rating %></h2> -->
- <% unless review.rating.nil? %>
-      <% nb_stars = review.rating.round.to_i %>
-      <% nb_stars.times do %>
-        <span style="color: #2F2FA2"><i class="fas fa-star"></i></span>
-      <% end %>
-      <% (5 - nb_stars).times do %>
-        <span style="color: #2F2FA2"><i class="far fa-star"></i></span>
-      <% end %>
-     <% end %>
-  <p><%= review.content %></p>
-  <p><%= review.user_name %></p>
-<% end %>
+     <% unless review.rating.nil? %>
+          <% nb_stars = review.rating.round.to_i %>
+          <% nb_stars.times do %>
+            <span style="color: #2F2FA2"><i class="fas fa-star"></i></span>
+          <% end %>
+          <% (5 - nb_stars).times do %>
+            <span style="color: #2F2FA2"><i class="far fa-star"></i></span>
+          <% end %>
+         <% end %>
+      <p><%= review.content %></p>
+      <p><%= review.user_name %></p>
+    <% end %>
 
 <h2><%= link_to 'Review', new_cinema_review_path(@cinema) %></h2>
 
 <h2><%= link_to 'Go back', cinemas_path %></h2>
+
+  </section>
