--- a/app/assets/stylesheets/components/_home.scss
+++ b/app/assets/stylesheets/components/_home.scss
@@ -3,3 +3,7 @@
                   url("./vue_interieur.jpg");
   background-size: cover;
 }
+
+.home-contact {
+  background-color: #191E55 !important;
+}
