--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -45,6 +45,7 @@
 .footer {
     padding-top: 80px;
     padding-bottom: 40px;
+    height: 60vh;
 }
 /*END FOOTER SOCIAL DESIGN*/
 .single_footer{}
