--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -17,13 +17,15 @@
   </nav>
   <a class="cd-nav-trigger cd-img-replace">Open navigation<span></span></a>
 
-  <section id="section1" class="cd-section">
+  <section id="section1" class="cd-section home-contact">
     <div class="section">
       <h1 class="pb-5">Contact</h1>
+      <br>
+      <br>
       <a href="#section2" class="cd-scroll-down cd-img-replace">scroll down</a>
       <div class="d-flex justify-content-between mx-5 px-5">
       <div class="contact-info">
-        <h1>Ōma</h1>
+        <img src="../assets/logo.png" alt="logo">
         <h3>38, rue de Trévise</h3>
         <h3>75009 Paris</h3>
         <h3>France</h3>
