--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -30,9 +30,9 @@
         }
 
         ul {
-            margin: 0;
-            padding: 0;
-            list-style: none;
+            // margin: 0;
+            // padding: 0;
+            // list-style: none;
         }
         img {
     max-width: 100%;
@@ -161,8 +161,8 @@ button {
 .social_profile {margin-top:40px;}
 .social_profile ul{
 list-style: outside none none;
-margin: 0;
-padding: 0;
+// margin: 0;
+// padding: 0;
 }
 .social_profile ul li{float:left;}
 .social_profile ul li a {
