--- a/app/views/pages/ōma.html.erb
+++ b/app/views/pages/ōma.html.erb
@@ -1,26 +1,93 @@
 <%= content_for(:navbar_class, "navbar-home") %>
-<ul class="cd-icons-filling js-cd-icons-filling">
-    <li class="cd-service cd-service--divider"></li>
+<nav id="cd-vertical-nav">
+    <ul style="list-style: none;">
+      <li>
+        <a href="#section1" data-number="1">
+          <span class="cd-dot"></span>
+          <span class="cd-label">Intro</span>
+        </a>
+      </li>
+      <li>
+        <a href="#section2" data-number="2">
+          <span class="cd-dot"></span>
+          <span class="cd-label">About</span>
+        </a>
+      </li>
+      <li>
+        <a href="#section3" data-number="3">
+          <span class="cd-dot"></span>
+          <span class="cd-label">Features</span>
+        </a>
+      </li>
+      <li>
+        <a href="#section4" data-number="4">
+          <span class="cd-dot"></span>
+          <span class="cd-label">Portfolio</span>
+        </a>
+      </li>
+      <li>
+        <a href="#section5" data-number="5">
+          <span class="cd-dot"></span>
+          <span class="cd-label">Pricing</span>
+        </a>
+      </li>
+      <li>
+        <a href="#section6" data-number="6">
+          <span class="cd-dot"></span>
+          <span class="cd-label">Contact</span>
+        </a>
+      </li>
+    </ul>
+  </nav>
+  <a class="cd-nav-trigger cd-img-replace">Open navigation<span></span></a>
 
-    <li class="cd-service cd-service--1 js-cd-service">
-      <h2>Web Design</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis pariatur tenetur quod veritatis nulla aspernatur architecto! Fugit, reprehenderit amet deserunt molestiae ut libero facere quasi velit perferendis ullam quis necessitatibus!</p>
-    </li> <!-- cd-service -->
+  <section id="section1" class="cd-section home1">
+    <div class="section">
+    <h1>What is Ōma</h1>
+    <a href="#section2" class="cd-scroll-down cd-img-replace">scroll down</a>
+    </div>
+  </section><!-- cd-section -->
 
-    <li class="cd-service cd-service--2 js-cd-service">
-      <h2>Responsive Approach</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis pariatur tenetur quod veritatis nulla aspernatur architecto! Fugit, reprehenderit amet deserunt molestiae ut libero facere quasi velit perferendis ullam quis necessitatibus!</p>
-    </li> <!-- cd-service -->
+  <section id="section2" class="cd-section">
+    <div class="section">
+    <div class="oma-container">
+      <h1>Ōma, the next cinema</h1>
+      <div class="block d-flex justify-content-between">
+        <div class="block-text">
+          <p>The innovative character of the Ōma cinema is based on a new type of architecture that can be summed up in three major transformations:</p>
+          <br>
+          <h3>Distribution of the seats</h3>
+          <br>
+          <p>The spectators are seated on several circular hanging platforms fixed on a sloping metal framework.</p>
+          <h3>Original layout</h3>
+          <br>
+          <p>As in theater, each platform forms a box with a few rows of seats accessible by two aisles.</p>
+          <h3>Positioning of the projector booth</h3>
+          <br>
+          <p>Ōma architecture integrates the projector in the structure at the back of the platforms, facing the center of the screen in both directions.</p>
+        </div>
+        <div class="image-block">
+          <img src="../assets/visuelblanc1" alt="visu">
+        </div>
+      </div>
+    </div>
+    </div>
+  </section><!-- cd-section -->
 
-    <li class="cd-service cd-service--3 js-cd-service">
-      <h2>E-commerce</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis pariatur tenetur quod veritatis nulla aspernatur architecto! Fugit, reprehenderit amet deserunt molestiae ut libero facere quasi velit perferendis ullam quis necessitatibus!</p>
-    </li> <!-- cd-service -->
+  <section id="section3" class="cd-section home2">
 
-    <li class="cd-service cd-service--4 js-cd-service">
-      <h2>CMS Integration</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis pariatur tenetur quod veritatis nulla aspernatur architecto! Fugit, reprehenderit amet deserunt molestiae ut libero facere quasi velit perferendis ullam quis necessitatibus!</p>
-    </li> <!-- cd-service -->
+    <p>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto numquam, totam iusto officia earum perferendis, culpa ad atque eveniet praesentium nobis expedita similique beatae tenetur. Distinctio vel tenetur, id cum.&rdquo;</p>
+  </section><!-- cd-section -->
 
-    <li class="cd-service cd-service--divider"></li>
-  </ul>
+  <section id="section4" class="cd-section">
+    <p>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto numquam, totam iusto officia earum perferendis, culpa ad atque eveniet praesentium nobis expedita similique beatae tenetur. Distinctio vel tenetur, id cum.&rdquo;</p>
+  </section><!-- cd-section -->
+
+  <section id="section5" class="cd-section">
+    <p>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto numquam, totam iusto officia earum perferendis, culpa ad atque eveniet praesentium nobis expedita similique beatae tenetur. Distinctio vel tenetur, id cum.&rdquo;</p>
+  </section><!-- cd-section -->
+
+  <section id="section6" class="cd-section">
+    <p>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto numquam, totam iusto officia earum perferendis, culpa ad atque eveniet praesentium nobis expedita similique beatae tenetur. Distinctio vel tenetur, id cum.&rdquo;</p>
+  </section><!-- cd-section -->
+
