--- a/app/assets/stylesheets/components/_home.scss
+++ b/app/assets/stylesheets/components/_home.scss
@@ -9,7 +9,7 @@
 }
 
 .home2 {
-  background-image: linear-gradient(rgba(25, 30, 85, 0.5), rgba(255, 255, 0, 0)),
-                  url("./foyer_oma.jpg");
+  background-image: url("./foyer_oma.jpg");
   background-size: cover;
+  padding: 0px !important;
 }
