--- a/app/views/pages/ōma.html.erb
+++ b/app/views/pages/ōma.html.erb
@@ -75,8 +75,8 @@
   </section><!-- cd-section -->
 
   <section id="section3" class="cd-section home2">
-
-    <p>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto numquam, totam iusto officia earum perferendis, culpa ad atque eveniet praesentium nobis expedita similique beatae tenetur. Distinctio vel tenetur, id cum.&rdquo;</p>
+    <div class="fond-foyer">
+    </div>
   </section><!-- cd-section -->
 
   <section id="section4" class="cd-section">
