--- a/app/assets/stylesheets/components/_oma.scss
+++ b/app/assets/stylesheets/components/_oma.scss
@@ -14,3 +14,12 @@
 .image-block img {
   height: 500px;
 }
+
+.fond-foyer {
+  background-color: $blue;
+  height: 100vh;
+  width: 40%;
+  position: absolute;
+  margin-right: 0px;
+  opacity: 0.5;
+}
