--- a/app/assets/stylesheets/components/_home.scss
+++ b/app/assets/stylesheets/components/_home.scss
@@ -13,3 +13,9 @@
   background-size: cover;
   padding: 0px !important;
 }
+
+.home3 {
+  background-image: url("./vue_interieur_salle.jpg");
+  background-size: cover;
+  padding: 0px !important;
+}
