--- a/app/views/pages/experience.html.erb
+++ b/app/views/pages/experience.html.erb
@@ -43,7 +43,7 @@
 
   <section id="section1" class="cd-section home1">
     <div class="section">
-    <h1>What is Ōma</h1>
+    <h1>Experience</h1>
     <a href="#section2" class="cd-scroll-down cd-img-replace">scroll down</a>
     </div>
   </section><!-- cd-section -->
@@ -73,17 +73,8 @@
     </div>
   </section><!-- cd-section -->
 
-  <section id="section3" class="cd-section home2">
-    <div class="fond-foyer d-flex">
-      <div class="foyer-text">
-        <h2>Customization</h2>
-        <p>The original configuration of this room also gives you the possibility to offer personalized services:</p>
-        <ul>
-          <li><i class="fas fa-home"></i>Privatization of entire boxes</li>
-          <li><i class="fas fa-user-friends"></i>Advance booking of seats</li>
-          <li><i class="fas fa-glass-martini"></i>VIP tickets with exclusive access to lounge or bar</li>
-        </ul>
-      </div>
+  <section id="section3" class="cd-section experience2">
+    <div class="fond-foyer">
     </div>
   </section><!-- cd-section -->
 
@@ -91,11 +82,10 @@
 
   </section><!-- cd-section -->
 
-  <section id="section5" class="cd-section home3">
+  <section id="section5" class="cd-section experience3">
 
   </section><!-- cd-section -->
 
   <section id="section6" class="cd-section">
 
   </section><!-- cd-section -->
-
