--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -31,7 +31,7 @@
 
       <% if user_signed_in? %>
       <a><li><%= link_to "What is Ōma ?", oma_path %></li></a>
-      <a href="#"><li>Experience</li></a>
+      <a><li><%= link_to "Experience", experience_path %></li></a>
       <a><li><%= link_to "Locations", cinemas_path %></li></a>
       <a><li><%= link_to "Contact", contact_path %></li></a>
       <a><li><%= link_to "Press", articles_path %></li></a>
