--- a/app/assets/stylesheets/components/_oma.scss
+++ b/app/assets/stylesheets/components/_oma.scss
@@ -18,8 +18,22 @@
 .fond-foyer {
   background-color: $blue;
   height: 100vh;
-  width: 40%;
-  position: absolute;
+  width: 45%;
+  left: 55%;
+  position: relative;
   margin-right: 0px;
-  opacity: 0.5;
+  opacity: 0.8;
+}
+
+.fond-foyer li, .fond-foyer p, .fond-foyer h2 {
+  color: white;
+}
+
+.fond-foyer li {
+  list-style: none;
+}
+
+.foyer-text {
+  margin: 0 auto;
+  text-align: left;
 }
