--- a/app/views/pages/ōma.html.erb
+++ b/app/views/pages/ōma.html.erb
@@ -75,14 +75,22 @@
 
   <section id="section3" class="cd-section home2">
     <div class="fond-foyer d-flex">
+      <img src="../assets/etoile.png" alt="etoile" class="etoile">
       <div class="foyer-text">
-        <h2>Customization</h2>
-        <p>The original configuration of this room also gives you the possibility to offer personalized services:</p>
-        <ul>
-          <li><i class="fas fa-home"></i>Privatization of entire boxes</li>
-          <li><i class="fas fa-user-friends"></i>Advance booking of seats</li>
-          <li><i class="fas fa-glass-martini"></i>VIP tickets with exclusive access to lounge or bar</li>
-        </ul>
+        <h2 class="pb-4">Customization</h2>
+        <div class="tiret"></div>
+          <p class="pt-4">The original configuration of this room also gives you the possibility to offer personalized services:</p>
+          <ul>
+            <div class="d-flex">
+            <li class="pb-3"><p><i class="fas fa-home fa-2x"></i>Privatization of entire boxes</p></li>
+            </div>
+            <div>
+            <li class="pb-3"><p><i class="fas fa-user-friends fa-2x"></i>Advance booking of seats</p></li>
+            </div>
+            <div>
+            <li class="pb-3"><p><i class="fas fa-glass-martini fa-2x"></i>VIP tickets with exclusive access to lounge or bar</p></li>
+            </div>
+          </ul>
       </div>
     </div>
   </section><!-- cd-section -->
