--- a/app/assets/stylesheets/components/_home.scss
+++ b/app/assets/stylesheets/components/_home.scss
@@ -19,3 +19,9 @@
   background-size: cover;
   padding: 0px !important;
 }
+
+.home4 {
+  background-image: url("./fond1.jpg");
+  background-size: cover;
+  padding: 0px !important;
+}
