--- a/app/views/pages/ōma.html.erb
+++ b/app/views/pages/ōma.html.erb
@@ -82,7 +82,7 @@
           <p class="pt-4">The original configuration of this room also gives you the possibility to offer personalized services:</p>
           <ul>
             <div class="d-flex">
-            <li class="pb-3"><p><i class="fas fa-home fa-2x"></i>Privatization of entire boxes</p></li>
+            <li class="pb-3"><p class="my-auto"><i class="fas fa-home fa-2x"></i>Privatization of entire boxes</p></li>
             </div>
             <div>
             <li class="pb-3"><p><i class="fas fa-user-friends fa-2x"></i>Advance booking of seats</p></li>
