--- a/app/assets/stylesheets/components/_sections.scss
+++ b/app/assets/stylesheets/components/_sections.scss
@@ -5,3 +5,23 @@
   height: 100vh;
 }
 
+.barre-blue {
+  background-color: $blue;
+  height: 100vh;
+  width: 35%;
+  position: relative;
+  left: 30vw;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+}
+
+.unforget {
+  display: flex;
+  flex-direction: column;
+  padding-top: 20%;
+  padding-left: 100px;
+  text-align: left;
+  width: 40vw;
+  h1 {
+    padding-bottom: 30px;
+  }
+}
