--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -49,11 +49,21 @@
   </section><!-- cd-section -->
 
   <section id="section2" class="cd-section">
-    <p>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto numquam, totam iusto officia earum perferendis, culpa ad atque eveniet praesentium nobis expedita similique beatae tenetur. Distinctio vel tenetur, id cum.&rdquo;</p>
+    <div class="container">
+      <div class="row">
+        <i class="fas fa-quote-left"></i>
+        <h2>Whereas all the cinemas built for more than 50 years now are similar and reproduce the same seating arrangement of the spectators, this concept of movie theater creates a cinematographic experience at the same time intimate, spectacular and immersive, making Ōma unique in the global cinematographic landscape.</h2>
+        <i class="fas fa-quote-right"></i>
+        <h3>Pierre Chican, CEO</h3>
+      </div>
+    </div>
   </section><!-- cd-section -->
 
-  <section id="section3" class="cd-section">
-    <p>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto numquam, totam iusto officia earum perferendis, culpa ad atque eveniet praesentium nobis expedita similique beatae tenetur. Distinctio vel tenetur, id cum.&rdquo;</p>
+  <section id="section3" class="cd-section home4">
+    <div class="unforget">
+      <h1>AN UNFORGETTABLE EXPERIENCE</h1>
+      <p>Much more than just the spectacular nature of the architecture, the original configuration of the room has been designed to offer viewers an exceptional audio and visual experience, projecting an image free of any distortion. Ōma is an experience that you will never forget.</p>
+    </div>
   </section><!-- cd-section -->
 
   <section id="section4" class="cd-section">
@@ -61,9 +71,41 @@
   </section><!-- cd-section -->
 
   <section id="section5" class="cd-section">
-    <p>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto numquam, totam iusto officia earum perferendis, culpa ad atque eveniet praesentium nobis expedita similique beatae tenetur. Distinctio vel tenetur, id cum.&rdquo;</p>
+    <div class="barre-blue">
+      <p>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto numquam, totam iusto officia earum perferendis, culpa ad atque eveniet praesentium nobis expedita similique beatae tenetur. Distinctio vel tenetur, id cum.&rdquo;</p>
+    </div>
   </section><!-- cd-section -->
 
-  <section id="section6" class="cd-section">
-    <p>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto numquam, totam iusto officia earum perferendis, culpa ad atque eveniet praesentium nobis expedita similique beatae tenetur. Distinctio vel tenetur, id cum.&rdquo;</p>
-  </section><!-- cd-section -->
+  <section id="cd-team" class="cd-section">
+      <div class="cd-container">
+        <h2>Our team</h2>
+        <ul>
+          <li>
+            <a href="#0" data-type="member-1">
+              <figure>
+                <img src="img/team-member-1.jpg" alt="Team member 1">
+                <div class="cd-img-overlay"><span>View Bio</span></div>
+              </figure>
+
+              <div class="cd-member-info">
+                John Smith <span>CEO</span>
+              </div> <!-- cd-member-info -->
+            </a>
+          </li>
+
+          <li>
+            <a href="#0" data-type="member-2">
+              <figure>
+                <img src="img/team-member-1.jpg" alt="Team member 1">
+                <div class="cd-img-overlay"><span>View Bio</span></div>
+              </figure>
+
+              <div class="cd-member-info">
+                Cristina Cameron <span>Marketing</span>
+              </div> <!-- cd-member-info -->
+            </a>
+          </li>
+        </ul>
+      </div> <!-- cd-container -->
+    </section>
+    <div class="cd-overlay"></div><!-- cd-team --><!-- cd-section -->
